--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@
                 document.getElementsByClassName("notValid_not")[i].style.color = "#ff0033";
             }
         }
-        else {           
-            for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
-                document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
+        else {
+            if (document.activeElement === document.getElementsByClassName("getinput")[0]) {
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
+                }
+            }
+            else {
+                for (i = 0; i < document.getElementsByClassName("notValid_not").length; i++) {
+                    document.getElementsByClassName("notValid_not")[i].style.color = "#fff";
+                }
             }
         }
         if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
