--- a/index.html
+++ b/index.html
@@ -302,8 +302,12 @@
             -webkit-appearance: textfield;
         }
 
-        input[type="search"]::-webkit-search-decoration {
-            -webkit-appearance: none;
+        input {
+            -webkit-appearance: searchfield;
+        }
+
+        *::-webkit-search-cancel-button {
+            -webkit-appearance: searchfield-cancel-button;
         }
         .notValid_not {
             color: #6a7989;
