--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
         </span>
+        <button>Получить ссылку</button>
     </div>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
