--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
         </span>
-        <button>Получить ссылку</button>
+        <button class="getLink">Получить ссылку</button>
     </div>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
@@ -318,6 +318,10 @@
             -ms-transition:     color 0.3s;
             -o-transition:      color 0.3s;
             transition:         color 0.3s;
+        }
+        
+        .getLink {
+            display: block;
         }
     </style>
 </body>
