--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
             height:100%;
         }
         
+        span {
+            display:block;
+        }
+        
         .input {
             position: relative;
             z-index: 1;
