--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
         </span>
-        <span>
-        <button class="getLink">Получить ссылку</button>
+        <span class="getLink">
+        <button>Получить ссылку</button>
         </span>
     </div>
     <style>
@@ -322,7 +322,8 @@
             transition:         color 0.3s;
         }
         
-        .getLink {
+        span.getLink,
+        span.input {
             display: block;
         }
     </style>
