--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
             height:100%;
         }
         
+        span {
+            width: 100%;
+        }
+        
         .input {
             position: relative;
             z-index: 1;
