--- a/index.html
+++ b/index.html
@@ -167,15 +167,17 @@
 <body>
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
+        <div class="Aligner-item">
         <span class="input input--kyo Aligner-item">
             <input class="getinput input__field input__field--kyo" type="search" id="input-19" onblur="colorTextGray()" onfocus="colorTextWhite()" oninput="cookieMaster()" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
         </span>
-        <span class="getLink Aligner-item">
+        </div>
+        <div class="getLink Aligner-item">
         <button>Получить ссылку</button>
-        </span>
+        </div>
     </div>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
