--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
             </label>
         </span>
         </div>
-        <div class="getLink Aligner-item">
-        <button>Получить ссылку</button>
+        <div class="getLink">
+            <button>Получить ссылку</button>
         </div>
     </div>
     <style>
@@ -197,6 +197,7 @@
         }
         
         .container {
+            margin: 0 auto;
             text-align: center;
             overflow: hidden;
             display: flex;
@@ -317,8 +318,8 @@
             transition:         color 0.3s;
         }
         
-        .Aligner-item {
-            max-width: 50%;
+        .getLink {
+            width: 100%;
         }
     </style>
 </body>
