--- a/index.html
+++ b/index.html
@@ -167,13 +167,17 @@
 <body>
     <input id="fake_user_name" name="fake_user[name]" style="position:absolute; top:-100px;" type="text" value="Safari Autofill Me">
     <div class="container">
+        <div class="box">
         <span class="input input--kyo">
             <input class="getinput input__field input__field--kyo" type="search" id="input-19" onblur="colorTextGray()" onfocus="colorTextWhite()" oninput="cookieMaster()" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
             <label class="input__label input__label--kyo" for="input-19">
                 <span class="input__label-content input__label-content--kyo">Укажите ссылку <span class="notValid_not">t.me/</span> или <span class="notValid_not">@username</span></span>
             </label>
         </span>
-        <p>test</p>
+        </div>
+        <div class="box">
+            <p>test</p>
+        </div>
     </div>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
@@ -194,11 +198,11 @@
         
         .container {
             margin: 0 auto;
-            text-align: center;
+            display: flex; /* establish flex container */
+            flex-direction: column; /* make main-axis vertical */
+            justify-content: center; /* align items vertically, in this case */
+            align-items: center; /* align items horizontally, in this case */
             overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             height:100%;
         }
         
