--- a/index.html
+++ b/index.html
@@ -334,6 +334,10 @@
           }
         }
         
+        .btn_getLink {
+            transform: scaleY(0);
+        }
+        
         .btn_getLinkShow {
           transform: scaleX(0);
           transform-origin: left;
