--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
         }
         
         .btn_getLinkShow {
-          transform: scaleX(0);
+          transform: scaleY(0);
           transform-origin: left;
           animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
-          animation-delay: 0.4s;
+          animation-delay: 0.1s;
         }
     </style>
 </body>
