--- a/index.html
+++ b/index.html
@@ -335,14 +335,9 @@
         }
         
         .btn_getLink {
-            transform: scaleY(0);
-        }
-        
-        .btn_getLinkShow {
-          transform: scaleY(1);
-          transform-origin: left;
+          transform: scaleY(0);
+          transform-origin: top;
           animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
-          animation-delay: 0.1s;
         }
     </style>
 </body>
