--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
                 }
             }
-            if(document.getElementsByClassName("getinput")[0].length >= 3) {
+            if(document.getElementsByClassName("getinput")[0].value.length >= 3) {
                 document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
             }
             else {
