--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
             }
             if(document.getElementsByClassName("getinput")[0].value.length >= 3) {
                 document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
+                console.log('more than 3');
             }
             else {
                 document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkShow");
+                console.log('less than 3');
             }
         }
         if(isEmpty(document.getElementsByClassName("getinput")[0].value)) {
