--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           transform-origin: top;
         }
         
-        btn_getLinkShow {
+        .btn_getLinkShow {
             animation: grow-top cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
         }
     </style>
