--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
         .btn_getLink {
           transform: scaleY(0);
           transform-origin: top;
+            animation: grow-top cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s backwards;
         }
         
         .btn_getLinkShow {
