--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
             }
             if(document.getElementsByClassName("getinput")[0].value.length >= 3) {
                 document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
+                document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkHide");
                 console.log('more than 3');
             }
             else {
                 document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkShow");
+                document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkHide");
                 console.log('less than 3');
             }
         }
@@ -339,11 +341,14 @@
         .btn_getLink {
           transform: scaleY(0);
           transform-origin: top;
-            animation: grow-top cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s backwards;
         }
         
         .btn_getLinkShow {
             animation: grow-top cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
+        }
+        
+        .btn_getLinkHide {
+            animation: grow-top cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.7s backwards;
         }
     </style>
 </body>
