--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                 }
             }
             if(document.getElementsByClassName("getinput")[0].value.length >= 3) {
-                document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
                 document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkHide");
+                document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkShow");
                 console.log('more than 3');
             }
             else {
-                document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkShow");
                 document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkHide");
+                document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkShow");
                 console.log('less than 3');
             }
         }
@@ -100,6 +100,7 @@
                     document.getElementsByClassName("notValid_not")[i].style.color = "#6a7989";
                 }
             }
+            document.getElementsByClassName("btn_getLink")[0].classList.add("btn_getLinkHide");
             document.getElementsByClassName("btn_getLink")[0].classList.remove("btn_getLinkShow");
         }
         setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
