--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </span>
         </div>
         <div class="box">
-            <button onclick="createLink" class="btn_getLink">Получить ссылку</button>
+            <button onclick="createLink()" class="btn_getLink">Получить ссылку</button>
         </div>
     </div>
     <style>
