--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
         
     window.onload = (function () {
-        new ClipboardJS('.btn_getLink');
+        //new ClipboardJS('.btn_getLink');
         var currentCookie = getCookie('tglink');
         document.getElementsByClassName("getinput")[0].value = currentCookie;
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) !== '@' && document.getElementsByClassName("getinput")[0].value.charAt(0) !== 'h' && document.getElementsByClassName("getinput")[0].value.charAt(0) !== 't' && !isEmpty(document.getElementsByClassName("getinput")[0].value)) {
@@ -137,6 +137,11 @@
         var currentLink = document.getElementsByClassName("getinput")[0].value;
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) === '@') {
             document.getElementsByClassName("getinput")[0].value = 'tgo.to/' + currentLink.slice(1);
+            var clipboard = new ClipboardJS('.btn_getLink', {
+                target: function() {
+                    return document.getElementsByClassName("getinput")[0];
+                }
+            });
         }
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) === 'h') {
             
@@ -200,7 +205,7 @@
         </span>
         </div>
         <div class="box">
-            <button onclick="createLink()" class="btn_getLink" data-clipboard-target="#input-19">Получить ссылку</button>
+            <button onclick="createLink()" class="btn_getLink">Получить ссылку</button>
         </div>
     </div>
     <style>
