--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     return document.getElementsByClassName("getinput")[0];
                 }
             });
-            document.getElementsByClassName("getinput")[0].blur();
+            setTimeout(document.getElementsByClassName("getinput")[0].blur();, 100);
         }
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) === 'h') {
             
