--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                     return document.getElementsByClassName("getinput")[0];
                 }
             });
-            setTimeout(function(){document.getElementsByClassName("getinput")[0].blur();}, 100);
+            setTimeout(function(){document.getElementsByClassName("getinput")[0].blur();}, 10);
+            setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
         }
         if (document.getElementsByClassName("getinput")[0].value.charAt(0) === 'h') {
             
