--- a/index.html
+++ b/index.html
@@ -223,11 +223,13 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            background-color: #eee;
             font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
         
         .container {
             margin: 0 auto;
+            background-color: #fff;
             display: flex; /* establish flex container */
             flex-direction: column; /* make main-axis vertical */
             justify-content: center; /* align items vertically, in this case */
