--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
             <button onclick="createLink()" class="btn_getLink">Получить ссылку</button>
         </div>
     </div>
+    <div class="aboutLink">
+        ?
+    </div>
     <style>
         *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
         .clearfix:before, .clearfix:after { content: ''; display: table; }
@@ -234,8 +237,17 @@
             justify-content: center; /* align items vertically, in this case */
             align-items: center; /* align items horizontally, in this case */
             overflow: hidden;
-            height:100%;
-            box-shadow: 0 4px 2px -2px gray;
+            height:100%;   
+            box-shadow: -4px 2px 20px 2px grey;
+        }
+        
+        .aboutLink {
+          position: absolute;
+          bottom: 0px;
+          margin-right: auto;
+          margin-left: auto;
+          left: 0px;
+          right: 0px;
         }
         
         .input {
