--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
         }
         
         .aboutLink {
-          position: absolute;
-          bottom: 0px;
-          margin-right: auto;
-          margin-left: auto;
-          left: 0px;
-          right: 0px;
+            position: absolute;
+            bottom: 0px;
+            margin-right: auto;
+            margin-left: auto;
+            left: 50%;
+            transform: translate(-50%, 0);
         }
         
         .input {
