--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         }
     }
         
-    containerSlideUp() {
+    function containerSlideUp() {
         document.getElementsByClassName("container")[0].classList.add("transitionContainer");
     }
     
