--- a/index.html
+++ b/index.html
@@ -386,10 +386,10 @@
         }
         
         .transitionContainer {
-            -webkit-transition: top 0.3s ease-out;  /* Chrome 1-25, Safari 3.2+ */
-             -moz-transition: top 0.3s ease-out;  /* Firefox 4-15 */
-               -o-transition: top 0.3s ease-out;  /* Opera 10.50–12.00 */
-                  transition: top 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+          -webkit-transition: margin 0.3s ease-out;  /* Chrome 1-25, Safari 3.2+ */
+             -moz-transition: margin 0.3s ease-out;  /* Firefox 4-15 */
+               -o-transition: margin 0.3s ease-out;  /* Opera 10.50–12.00 */
+                  transition: margin 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
             margin-top: -55px;
         }
     </style>
