--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
             left: 50%;
             transform: translate(-50%, 0);
             cursor: pointer;
+            z-index: -10;
         }
         
         .input {
