--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
         
     function goAbout() {
         document.getElementsByClassName("container")[0].style.marginTop = "-100%";
+        document.getElementsByClassName("sayHellp")[0].style.bottom = "-20";
+        setTimeout(function(){window.location.assign("http://tgo.to/about");}, 520);  
     }
     
 (function(l, projectPages) {
