--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         
     function goAbout() {
         document.getElementsByClassName("container")[0].style.marginTop = "-200%";
-        document.getElementsByClassName("sayHellp")[0].style.bottom = "-20";
+        document.getElementsByClassName("sayHello")[0].style.bottom = "-20";
         setTimeout(function(){window.location.assign("http://tgo.to/about");}, 520);  
     }
     
