--- a/index.html
+++ b/index.html
@@ -434,6 +434,12 @@
                   transition: bottom 0.25s ease-in-out;
             bottom: 20px;
         }
+        
+        @media only screen and (max-width: 600px) {
+            .sayHello {
+                display: none;
+            }
+        }
     </style>
 </body>
 </html>
