--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
     <title>Telegram GoTo⚡️</title>
     
     <script>  
-    if(performance.navigation.type == 2){
-       location.reload(true);
-    }
+    window.addEventListener( "pageshow", function ( event ) {
+      var historyTraversal = event.persisted || 
+                             ( typeof window.performance != "undefined" && 
+                                  window.performance.navigation.type === 2 );
+      if ( historyTraversal ) {
+        // Handle page restore.
+        window.location.reload();
+      }
+    });
     function getCookie(cname) {
         var name = cname + "=",
             ca = document.cookie.split(';'),
