--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     function goAbout() {
         document.getElementsByClassName("container")[0].style.marginTop = "-200%";
         document.getElementsByClassName("sayHello")[0].style.bottom = "-20";
+        document.getElementsByClassName("aboutLink")[0].style.bottom = "-200%";
         setTimeout(function(){window.location.assign("http://tgo.to/about");}, 520);  
     }
     
@@ -281,6 +282,10 @@
             left: 50%;
             transform: translate(-50%, 0);
             cursor: pointer;
+            -webkit-transition: margin 0.5s ease-in-out;
+             -moz-transition: margin 0.5s ease-in-out;
+               -o-transition: margin 0.5s ease-in-out;
+                  transition: margin 0.5s ease-in-out;
         }
         
         .sayHello {
