--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     function goAbout() {
         document.getElementsByClassName("container")[0].style.marginTop = "-200%";
         document.getElementsByClassName("sayHello")[0].style.bottom = "-20";
-        document.getElementsByClassName("aboutLink")[0].style.bottom = "-200%";
+        document.getElementsByClassName("aboutLink")[0].style.marginTop = "-200%";
         setTimeout(function(){window.location.assign("http://tgo.to/about");}, 520);  
     }
     
