--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
             left: 50%;
             transform: translate(-50%, 0);
             cursor: pointer;
+            color: #6a7989;
             -webkit-transition: margin 0.5s ease-in-out;
              -moz-transition: margin 0.5s ease-in-out;
                -o-transition: margin 0.5s ease-in-out;
