--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     }
         
     function containerSlideUp() {
+        document.getElementsByClassName("getinput")[0].blur();
         document.getElementsByClassName("container")[0].classList.add("transitionContainer");
         document.getElementsByClassName("sayHello")[0].classList.add("transitionSayHello");
     }
