--- a/about.html
+++ b/about.html
@@ -1,1 +1,52 @@
-asd
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="tgo.to">
+    <meta name="application-name" content="tgo.to">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>Telegram GoTo About⚡️</title>
+</head>
+  <body>
+    <div class="container">
+      <div class=Logo">
+        <h2>Telegram GoTo</h2>
+      </div>
+    </div>
+    <style>
+        *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
+        .clearfix:before, .clearfix:after { content: ''; display: table; }
+        .clearfix:after { clear: both; }
+        
+        html, body {
+            position: fixed;
+            top: 0; 
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-color: #fff;
+            font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        }
+        
+        .container {
+            margin: 0 auto;
+            display: flex; /* establish flex container */
+            flex-direction: column; /* make main-axis vertical */
+            justify-content: center; /* align items vertically, in this case */
+            align-items: center; /* align items horizontally, in this case */
+            overflow: hidden;
+            height:100%;
+        }
+  </body>
+</html>
