--- a/about.html
+++ b/about.html
@@ -48,5 +48,29 @@
             overflow: hidden;
             height:100%;
         }
+                                                                                                                   
+        .Logo {
+          opacity: 0;
+          animation: fade-in-right ease 0.4s forwards;
+        }
+                                                                                                                   
+        @keyframes fade-in-right {
+          from {
+            opacity: 0;
+            transform: translateX(-15px);
+          }
+          to {
+            opacity: 1;
+            transform: translateX(0);
+          }
+        }
+        @keyframes grow-left {
+          from {
+            transform: scaleX(0);
+          }
+          to {
+            transform: scaleX(1);
+          }
+        }
   </body>
 </html>
