--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
 </head>
   <body>
     <div class="container">
-      <div class=Logo">
-        <h2>Telegram GoTo</h2>
+      <div>
+        <h2 class=Logo">Telegram GoTo</h2>
       </div>
     </div>
     <style>
@@ -72,5 +72,6 @@
             transform: scaleX(1);
           }
         }
+    </style>
   </body>
 </html>
