--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div>
-        <h2 class=Logo">Telegram GoTo</h2>
+        <h2 class="Logo">Telegram GoTo</h2>
       </div>
     </div>
     <style>
