--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
             left: 50%;
             transform: translate(-50%, 0);
             cursor: pointer;
+            color: #6a7989;
               -webkit-transition: bottom 0.2s ease-in-out;
                  -moz-transition: bottom 0.2s ease-in-out;
                    -o-transition: bottom 0.2s ease-in-out;
