--- a/about.html
+++ b/about.html
@@ -67,10 +67,9 @@
         }
         
         .about {
-            transform: scaleX(0);
-            transform-origin: left;
-            animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
-            animation-delay: 0.4s;
+            opacity: 0;
+            animation: fade-in-right ease 0.4s forwards;
+            animation-delay: 0.5s;
         }
                                                                                                                    
         @keyframes fade-in-right {
