--- a/about.html
+++ b/about.html
@@ -64,12 +64,14 @@
             opacity: 0;
             animation: fade-in-right ease 0.4s forwards;
             animation-delay: 0.3s;
+            text-align: center;
         }
         
         .about {
             opacity: 0;
             animation: fade-in-right ease 0.4s forwards;
             animation-delay: 0.5s;
+            margin-left: 25px;
         }
                                                                                                                    
         @keyframes fade-in-right {
