--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                   <i>Зачем?</i> - Я за удобный интернет и свободу слова.
                 </p>
                 <p>
-                  <i>Есть аналоги. Чем <link href="https://tgo.to">tgo.to</link> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в телеграм. 
+                  <i>Есть аналоги. Чем <a href="https://tgo.to">tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в телеграм. 
                 </p>
             </div>
       </div>
