--- a/about.html
+++ b/about.html
@@ -31,6 +31,9 @@
                   <i>Есть аналоги. Чем <a href="https://tgo.to">tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в телеграм. 
                 </p>
             </div>
+            <div class=credits">
+                По всем вопросам: <a href="tg://msg?text=#digitalresistance&to=nikitashal">tgo.to/nikitashal</a>
+            </div>
       </div>
     </div>
     <style>
@@ -94,6 +97,11 @@
             opacity: 1;
             transform: translateY(0);
           }
+        }
+        @media only screen and (max-width: 400px) {
+            .about {
+                text-align: center;
+            }
         }
     </style>
   </body>
