--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                   <i>Есть аналоги. Чем <a href="https://tgo.to">tgo.to</a> лучше?</i> - Аналоги вынуждают смотреть рекламу до перехода в телеграм. 
                 </p>
             </div>
-            <div class=credits">
+            <div class="credits">
                 По всем вопросам: <a href="tg://msg?text=#digitalresistance&to=nikitashal">tgo.to/nikitashal</a>
             </div>
       </div>
