--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div class="credits">
-                По всем вопросам: <a href="tg://msg?text=#digitalresistance&to=nikitashal">tgo.to/nikitashal</a>
+                По всем вопросам: <a href="https://tgo.to/nikitashal">tgo.to/nikitashal</a> с хаштегом #digitalresistance
             </div>
       </div>
     </div>
