--- a/about.html
+++ b/about.html
@@ -77,6 +77,13 @@
             animation-delay: 0.5s;
             margin-left: 7px;
         }
+        
+        .credits{
+            opacity: 0;
+            animation: fade-in-top ease 0.4s forwards;
+            animation-delay: 0.8s;
+            margin-left: 7px;
+        }
                                                                                                                    
         @keyframes fade-in-right {
           from {
