--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     
     <script>
         function goRoot(){
-            document.getElementsByClassName("container")[0].animate(fade-out-right); 
+            document.getElementsByClassName("container")[0].animate('fade-out-right'); 
         }
     </script>
 </head>
