--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <script>
         function goRoot(){
             document.getElementsByClassName("container")[0].classList.add("containerFadeOut");
-            setTimeout(function(){window.location.assign("http://tgo.to/");}, 400);
+            setTimeout(function(){window.location.assign("http://tgo.to/");}, 350);
         }
     </script>
 </head>
@@ -106,6 +106,8 @@
             animation: fade-in-top ease 0.5s forwards;
             animation-delay: 1s;
             margin-left: 7px;
+            color: rgba(0, 115, 207);
+            cursor: pointer;
         }
                                                                                                                    
         @keyframes fade-in-right {
