--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
           <br>
             <div class="credits">
-                По всем вопросам: <a href="https://tgo.to/nikitashal">tgo.to/nikitashal</a> с хаштегом #digitalresistance
+                По всем вопросам:<br> <a href="https://tgo.to/nikitashal">tgo.to/nikitashal</a> с хаштегом #digitalresistance
             </div>
           <br>
           <div class="rootLink" onclick="goRoot()">
