--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         }
         else {
             var l = new URL(currentLink).pathname;
-            document.getElementsByClassName("getinput")[0].value = 'tgo.to/' + l;
+            document.getElementsByClassName("getinput")[0].value = 'tgo.to' + l;
             var clipboard = new ClipboardJS('.btn_getLink', {
                 target: function() {
                     return document.getElementsByClassName("getinput")[0];
