--- a/index.html
+++ b/index.html
@@ -154,8 +154,19 @@
             setTimeout(function(){document.getElementsByClassName("getinput")[0].blur();}, 10);
             setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
         }
-        else {
+        if (currentLink.startsWith("http")) {
             var l = new URL(currentLink).pathname;
+            document.getElementsByClassName("getinput")[0].value = 'tgo.to' + l;
+            var clipboard = new ClipboardJS('.btn_getLink', {
+                target: function() {
+                    return document.getElementsByClassName("getinput")[0];
+                }
+            });
+            setTimeout(function(){document.getElementsByClassName("getinput")[0].blur();}, 10);
+            setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
+        }
+        if (currentLink.startsWith("t.me/")) {
+            var l = 'https://t.me' + new URL(currentLink).pathname;
             document.getElementsByClassName("getinput")[0].value = 'tgo.to' + l;
             var clipboard = new ClipboardJS('.btn_getLink', {
                 target: function() {
