--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
             setCookie('tglink', document.getElementsByClassName("getinput")[0].value);
         }
         if (currentLink.startsWith("t.me/")) {
-            var l = 'https://t.me' + new URL(currentLink).pathname;
+            var l = new URL(currentLink).pathname;
+            l = 'https://t.me' + l;
             document.getElementsByClassName("getinput")[0].value = 'tgo.to' + l;
             var clipboard = new ClipboardJS('.btn_getLink', {
                 target: function() {
