--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <h2 class="Logo">Telegram GoTo</h2>
             <div class="about">
                 <p>
-                Сервис предназначен для создания ссылок работающих на территории стран где заблокирован мессенджер Telegram.
+                Сервис создания ссылок работающих на территории стран где заблокирован мессенджер Telegram.
                 </p>
                 <p>
                   <i>Зачем?</i> - Я за удобный интернет и свободу слова.
