--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="tgo.to">
-    <meta name="telegram goto" content="tgo.to">
+    <meta name="author" content="NikitaShal">
+    <meta name="keywords" content="Telegram, Freedom, tgo.to">
+    <meta name="description" content="Рабочая телеграм ссылка">
     <meta name="yandex-verification" content="9514ed2cd535e5da" />
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
