--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
             </div>
           <br>
             <div class="credits">
-                По всем вопросам:<br> <a href="https://tgo.to/nikitashal">tgo.to/nikitashal</a> с хаштегом #digitalresistance
+                Создатель сервиса:<br> <br><a href="https://tgo.to/cryptohumanbeing">@cryptohumanbeing</a></b>
+                По всем вопросам:<br> <a href="https://tgo.to/nikitashal">@nikitashal</a> с хаштегом #digitalresistance
             </div>
           <br>
           <div class="rootLink" onclick="goRoot()">
