--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </div>
           <br>
             <div class="credits">
-                Создатель сервиса:<br> <br><a href="https://tgo.to/cryptohumanbeing">@cryptohumanbeing</a></b><br>
+                Создатель сервиса <br><a href="https://tgo.to/cryptohumanbeing">@cryptohumanbeing</a></b><br>
                 По всем вопросам:<br> <a href="https://tgo.to/nikitashal">@nikitashal</a> с хаштегом #digitalresistance
             </div>
           <br>
